Pixel Perfect для страницы index.html.

--- a/source/index.html
+++ b/source/index.html
@@ -7,34 +7,6 @@
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="/css/normalize/normalize.css">
   <link rel="stylesheet" href="/css/style.css">
-  <!-- Pixel Glass -->
-  <!-- <style>
-    HTML {
-      background-repeat: no-repeat;
-      background-position: 100% 0;
-      /* По умолчанию показывается мобильный макет */
-      background-image: url("img/sedona-photo-mobile.jpg");
-    }
-
-    /* Планшет */
-    @media (min-width: 768px) {
-      HTML {
-        /* Планшетный макет */
-        background-image: url("img/sedona-photo-tablet.jpg");
-      }
-    }
-
-    /* Десктоп */
-    @media (min-width: 1200px) {
-      HTML {
-        /* Десктопный макет */
-        background-image: url("img/960.png");
-      }
-    }
-  </style>
-  <link href="/js/pixel-glass/styles.css" rel="stylesheet">
-  <script src="/js/pixel-glass/script.js"></script> -->
-  <!-- // Pixel Glass -->
 </head>
 
 <body class="page__body">
@@ -108,9 +80,9 @@
       <section class="advantages">
         <h2 class="visually-hidden">Почему стоит выбрать Седону</h2>
         <section class="advantages__intro inscription">
-          <p class="inscription__slogan">Седона &mdash; небольшой <br> городок в Аризоне, <br> заслуживающий большего!
+          <p class="inscription__slogan">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!
           </p>
-          <p class="inscription__text">Рассмотрим 5 причин, по которым <br> Седона круче, чем Гранд Каньон!</p>
+          <p class="inscription__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </section>
         <div class="advantages__wrapper">
           <ul class="advantages__list">
@@ -164,7 +136,7 @@
                   </svg>
                   <div class="facilities__text">
                     <h4 class="facilities__title">Жилье</h4>
-                    <p class="facilities__slogan">Рекомендуем пожить в <br> настоящем мотеле, все как в <br> кино!</p>
+                    <p class="facilities__slogan">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                   </div>
                 </div>
               </li>
@@ -179,7 +151,8 @@
                   </svg>
                   <div class="facilities__text">
                     <h4 class="facilities__title">Сувениры</h4>
-                    <p class="facilities__slogan">Не только китайского, но и <br> местного производства!</p>
+                    <p class="facilities__slogan facilities__slogan-suvenirs">Не только китайского, но и местного
+                      производства!</p>
                   </div>
                 </div>
               </li>
@@ -203,7 +176,7 @@
                   </svg>
                   <div class="facilities__text">
                     <h4 class="facilities__title">Еда</h4>
-                    <p class="facilities__slogan">Всегда заказывайте <br> фирменный бургер, вы не разочаруетесь!</p>
+                    <p class="facilities__slogan">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                   </div>
                 </div>
               </li>
@@ -215,7 +188,7 @@
 
                 <div class="bridge-item__description">
 
-                  <h3 class="bridge-item__title">Там есть<br> мост дьявола</h3>
+                  <h3 class="bridge-item__title">Там есть <br> мост дьявола</h3>
                   <p class="bridge-item__number">&mdash;№2&mdash;</p>
                   <p class="bridge-item__slogan">Да, по нему можно пройти! Eсли вы осмелитесь, конечно </p>
                 </div>
@@ -239,9 +212,9 @@
 
               <li class="advantages__item square-item">
                 <div class="square-item__section">
-                  <h3 class="advantages__title">Небольшая <br> площадь</h3>
+                  <h3 class="advantages__title">Небольшая площадь</h3>
                   <p class="square-item__number">&mdash;№3&mdash;</p>
-                  <p class="square-item__slogan">Все интересные места находятся <br> очень близко </p>
+                  <p class="square-item__slogan">Все интересные места находятся очень близко
                 </div>
               </li>
 
@@ -249,15 +222,15 @@
                 <div class="road-item__section">
                   <h3 class="advantages__title">Красивая <br> дорога</h3>
                   <p class="road-item__number">&mdash;№4&mdash;</p>
-                  <p class="road-item__slogan">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+                  <p class="road-item__slogan">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                 </div>
               </li>
 
               <li class="advantages__item tourists-item">
                 <div class="tourists-item__section">
-                  <h3 class="advantages__title">Мало <br> туристов</h3>
+                  <h3 class="advantages__title">Мало туристов</h3>
                   <p class="tourists-item__number">&mdash;№5&mdash;</p>
-                  <p class="tourists-item__slogan">Большинство едет в гранд каньон <br> и толпится там</p>
+                  <p class="tourists-item__slogan">Большинство едет в гранд каньон и толпится там</p>
                 </div>
               </li>
             </div>
@@ -269,7 +242,7 @@
         <h2 class="visually-hidden">Поиск гостиницы</h2>
         <div class="search-section__text">
           <p class="search-section__subject">Заинтересовались?</p>
-          <p class="search-section__subtitle">Укажите предполагаемые даты поездки, <br> и мы покажем вам
+          <p class="search-section__subtitle">Укажите предполагаемые даты поездки,<br> и мы покажем вам
             лучшие предложения гостиниц в Cедоне</p>
         </div>
         <div class="search-section__button">
