--- a/source/index.html
+++ b/source/index.html
@@ -253,8 +253,8 @@
       <section class="map">
         <h2 class="visually-hidden">Где находится Седона</h2>
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3381003.256085881!2d-114.17823951985389!3d34.15245640453722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b08ebcb4c186b%3A0x423927b17fc1cd71!2z0JDRgNC40LfQvtC90LAsINCh0KjQkA!5e0!3m2!1sru!2scz!4v1595419092166!5m2!1sru!2scz"
-          width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+          src="https://maps.google.com/maps?width=320&amp;height=450&amp;hl=ru&amp;q=34.8629778,-111.7883472+(My%20Business%20Name)&amp;t=&amp;z=7&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+          width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen aria-hidden="false"
           tabindex="0"></iframe>
         <picture class="map__photo">
           <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
