Исправления pixel perfect.

--- a/source/photo.html
+++ b/source/photo.html
@@ -149,7 +149,7 @@
                 <h3 class="plants-card__name card-title">Местная растительность</h3>
                 <span class="plants-card__author card-author-name">Автор фото: Сергей</span>
               </div>
-              <div class="cards-section__review plants-card__review card-review">
+              <div class="cards-section__review plants-card__review">
                 <svg class="cards-section__like-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                   viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
@@ -264,8 +264,6 @@
               <img class="video-image" src="../img/video-mobile@1x.jpg" srcset="../img/video-mobile@2x.jpg 2x"
                 alt="Видеопрезентация">
             </picture>
-          </p>
-
           <div class="intro-video__player player">
             <div class="player__timeline timeline">
               <div class="timeline__bar"></div>
@@ -300,6 +298,7 @@
               </svg>
             </p>
           </div>
+          </p>
         </div>
       </section>
 
