--- a/source/form.html
+++ b/source/form.html
@@ -72,8 +72,8 @@
 
       <section class="intro-background">
         <div class="intro-background__cover">
-          <img class="intro-background__inscription" src="img/text-sedona.svg" alt="Надпись Седона" width="100%"
-            height="160px">
+          <img class="intro-background__inscription" src="img/text-sedona.svg" alt="Надпись Седона" width="229"
+            height="39">
         </div>
       </section>
 
