Исправление PixelPerfect для страницы form.html.

--- a/source/form.html
+++ b/source/form.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="introduce-fieldset__middle-name middle-name">
-              <label class="middle-name__label" for="middle-name">Отчество*:</label>
+              <label class="middle-name__label" for="middle-name">Отчество:</label>
               <input class="middle-name__input" type="text" name="middle-name" id="middle-name" value="Александрович">
             </div>
           </div>
@@ -218,8 +218,20 @@
         <input class="review-form__submit-button" type="submit" value="Отправить отзыв">
 
         <div>
-          <span class="review-form__text-requared">*&mdash;обязательные поля</span>
+          <span class="review-form__text-requared">* &mdash; обязательные поля</span>
         </div>
+
+        <!-- <div class="review-form__modal--success">
+          <h2>Ваш отзыв отправлен</h2>
+          <p>Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+          <button>Закрыть окно</button>
+        </div> -->
+
+        <!-- <div class="review-form__modal--fail">
+          <h2>Что-то пошло не так!</h2>
+          <p>Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+          <button>Ок</button>
+        </div> -->
       </form>
 
     </main>
