Исправление PixelPerfect для страницы photo.html.

--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,7 @@
               </div>
             </li>
 
-            <ul class="city-item__facilities facilities">
+            <ul class="facilities">
 
               <li class="facilities__item">
                 <div class="facilities__section">
