--- a/source/photo.html
+++ b/source/photo.html
@@ -138,7 +138,7 @@
                       srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)"
                       srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
-                    <img class="photo-cactus__image" src="img/photo-cactus-mobile@1x.jpg"
+                    <img class="plants-card__image" src="img/photo-cactus-mobile@1x.jpg"
                       srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Фото кактуса">
                   </picture>
                 </p>
