--- a/source/index.html
+++ b/source/index.html
@@ -48,12 +48,12 @@
               </a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="#">
+              <a class="site-list__link" href="photo.html">
                 Фото и видео
               </a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="#">
+              <a class="site-list__link" href="form.html">
                 Форма отзыва
               </a>
             </li>
