Стилизация страницы form.html. Исправление поведения мобильного меню.

--- a/source/form.html
+++ b/source/form.html
@@ -108,12 +108,11 @@
         </fieldset>
 
         <fieldset class="review-form__fieldset contacts-fieldset">
-          <h2 class="contacts-fieldset__title">Контактная информация:</h2>
+          <h2 class="contacts-fieldset__title"><span class="hru">Контактная информация:</span></h2>
 
           <section class="contacts-fieldset__section">
             <div class="contacts-fieldset__phone phone">
-              <label class="phone__label" for="phone"><span>Контактный</span> телефон*:
-              </label>
+              <label class="phone__label" for="phone"><span>Контактный</span>телефон*:</label>
 
               <div class="phone__input-block phone-block">
                 <input class="phone-block__input" type="tel" name="phone" id="phone" placeholder="Введите телефон"
@@ -178,7 +177,7 @@
         </fieldset>
 
         <fieldset class="review-form__fieldset places-fieldset">
-          <h2 class="places-fieldset__title">Посещенные <br>достопримечательности:</h2>
+          <h2 class="places-fieldset__title"><span>Посещенные <br>достопримечательности:</span></h2>
 
           <ul class="places-fieldset__choices">
 
