--- a/source/index.html
+++ b/source/index.html
@@ -151,7 +151,7 @@
                   </svg>
                   <div class="facilities__text">
                     <h4 class="facilities__title">Сувениры</h4>
-                    <p class="facilities__slogan facilities__slogan-suvenirs">Не только китайского, но и местного
+                    <p class="facilities__slogan">Не только китайского,<br> но и местного
                       производства!</p>
                   </div>
                 </div>
