Добавлены стили hover и focus для радио и чекбоксов.

--- a/source/form.html
+++ b/source/form.html
@@ -160,17 +160,26 @@
             <li class="impressions-fieldset__choice impression-choice">
               <input class="impression-choice__input visually-hidden" type="radio" id="rather-like" name="opinion"
                 value="Скорее положительное" checked>
-              <label class="impression-choice__label" for="rather-like">Скорее положительное</label><br>
+              <label class="impression-choice__label" for="rather-like">
+                <div class="impression-choice__active-input" tabindex="0"></div>
+                Скорее положительное
+              </label>
             </li>
             <li class="impressions-fieldset__choice impression-choice">
               <input class="impression-choice__input visually-hidden" type="radio" id="rather-negative" name="opinion"
                 value="Скорее отрицательное">
-              <label class="impression-choice__label" for="rather-negative">Скорее отрицательное</label><br>
+              <label class="impression-choice__label" for="rather-negative">
+                <div class="impression-choice__active-input" tabindex="1"></div>
+                Скорее отрицательное
+              </label>
             </li>
             <li class="impressions-fieldset__choice impression-choice">
               <input class="impression-choice__input visually-hidden" type="radio" id="no-answer" name="opinion"
                 value="Затрудняюсь ответить">
-              <label class="impression-choice__label" for="no-answer">Затрудняюсь ответить</label><br>
+              <label class="impression-choice__label" for="no-answer">
+                <div class="impression-choice__active-input" tabindex="2"></div>
+                Затрудняюсь ответить
+              </label>
             </li>
           </ul>
 
@@ -184,25 +193,37 @@
             <li class="places-fieldset__choice place-choice">
               <input class="place-choice__input visually-hidden" type="checkbox" name="devil-bridge" id="devil-bridge"
                 value="Мост Дьявола" checked>
-              <label class="place-choice__label" for="devil-bridge">Мост Дьявола</label>
+              <label class="place-choice__label" for="devil-bridge">
+                <div class="place-choice__active-input" tabindex="3"></div>
+                Мост Дьявола
+              </label>
             </li>
 
             <li class="places-fieldset__choice place-choice">
               <input class="place-choice__input visually-hidden" type="checkbox" name="bell-mountain" id="bell-mountain"
                 value="Гора-Колокол" checked>
-              <label class="place-choice__label" for="bell-mountain">Гора-Колокол</label>
+              <label class="place-choice__label" for="bell-mountain">
+                <div class="place-choice__active-input" tabindex="4"></div>
+                Гора-Колокол
+              </label>
             </li>
 
             <li class="places-fieldset__choice place-choice">
               <input class="place-choice__input visually-hidden" type="checkbox" name="slide-park" id="slide-park"
                 value="Слайд-парк" checked>
-              <label class="place-choice__label" for="slide-park">Слайд-парк</label>
+              <label class="place-choice__label" for="slide-park">
+                <div class="place-choice__active-input" tabindex="5"></div>
+                Слайд-парк
+              </label>
             </li>
 
             <li class="places-fieldset__choice place-choice">
               <input class="place-choice__input visually-hidden" type="checkbox" name="red-rocks" id="red-rocks"
                 value="Красные скалы">
-              <label class="place-choice__label" for="red-rocks">Красные скалы</label>
+              <label class="place-choice__label" for="red-rocks">
+                <div class="place-choice__active-input" tabindex="5"></div>
+                Красные скалы
+              </label>
             </li>
 
           </ul>
