--- a/source/form.html
+++ b/source/form.html
@@ -203,7 +203,7 @@
               <input class="place-choice__input visually-hidden" type="checkbox" name="bell-mountain" id="bell-mountain"
                 value="Гора-Колокол" checked>
               <label class="place-choice__label" for="bell-mountain">
-                <div class="place-choice__active-input" tabindex="4"></div>
+                <div class="place-choice__active-input place-choice__mountain-input" tabindex="4"></div>
                 Гора-Колокол
               </label>
             </li>
@@ -212,7 +212,7 @@
               <input class="place-choice__input visually-hidden" type="checkbox" name="slide-park" id="slide-park"
                 value="Слайд-парк" checked>
               <label class="place-choice__label" for="slide-park">
-                <div class="place-choice__active-input" tabindex="5"></div>
+                <div class="place-choice__active-input place-choice__park-input" tabindex="5"></div>
                 Слайд-парк
               </label>
             </li>
