--- a/source/index.html
+++ b/source/index.html
@@ -151,7 +151,8 @@
                   </svg>
                   <div class="facilities__text">
                     <h4 class="facilities__title">Сувениры</h4>
-                    <p class="facilities__slogan">Не только китайского,<br> но и местного
+                    <p class="facilities__slogan">Не только китайского,<br class="facilities__souvenir-newline"> но и
+                      местного
                       производства!</p>
                   </div>
                 </div>
@@ -176,7 +177,8 @@
                   </svg>
                   <div class="facilities__text">
                     <h4 class="facilities__title">Еда</h4>
-                    <p class="facilities__slogan">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                    <p class="facilities__slogan">Всегда заказывайте фирменный бургер,<br
+                        class="facilities__food-newline"> вы не разочаруетесь!</p>
                   </div>
                 </div>
               </li>
