Исправление элемента на странице form

--- a/source/form.html
+++ b/source/form.html
@@ -92,17 +92,19 @@
             <h2 class="introduce-fieldset__title">Представьтесь:</h2>
             <div class="introduce-fieldset__first-name first-name">
               <label class="first-name__label" for="first-name">Имя*:</label>
-              <input class="first-name__input" type="text" name="first-name" id="first-name" value="Петр" required>
+              <input class="first-name__input" type="text" name="first-name" id="first-name" placeholder="Петр"
+                required>
             </div>
 
             <div class="introduce-fieldset__last-name last-name">
               <label class="last-name__label" for="last-name">Фамилия*:</label>
-              <input class="last-name__input" type="text" name="last-name" id="last-name" value="Иванов" required>
+              <input class="last-name__input" type="text" name="last-name" id="last-name" placeholder="Иванов" required>
             </div>
 
             <div class="introduce-fieldset__middle-name middle-name">
               <label class="middle-name__label" for="middle-name">Отчество:</label>
-              <input class="middle-name__input" type="text" name="middle-name" id="middle-name" value="Александрович">
+              <input class="middle-name__input" type="text" name="middle-name" id="middle-name"
+                placeholder="Александрович">
             </div>
           </div>
         </fieldset>
