--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
         <button class="main-nav__button main-nav__button--opened" type="button">
           <span class="visually-hidden">Открыть меню</span>
 
-          <svg class="main-nav__icon-menu" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+          <svg class="main-nav__icon-menu" version="1.0" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px"
             viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
             <g>
@@ -33,7 +33,7 @@
             </g>
           </svg>
 
-          <svg class="main-nav__icon-cross" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+          <svg class="main-nav__icon-cross" version="1.0" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23px" height="23px"
             viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
             <polygon
@@ -121,12 +121,12 @@
                   required pattern="[0-9]{3}[ -][0-9]{3}[ -][0-9]{4}">
 
                 <div class="phone-block__icon">
-                  <svg class="phone-block__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                  <svg class="phone-block__svg" version="1.0" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px"
                     viewbox="0 0 18 18" enable-background="new 0 0 18 18" xml:space="preserve">
                     <g id="Page-1">
                       <g id="Icons-Communication" transform="translate(-85.000000, -126.000000)">
-                        <g id="phone" transform="translate(85.000000, 126.000000)">
+                        <g transform="translate(85.000000, 126.000000)">
                           <path id="Shape" fill="#010101"
                             d="M3.6,7.8C5,10.6,7.4,12.9,10.2,14.4l2.2-2.2c0.3-0.3,0.699-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6 c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6 c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z" />
                         </g>
@@ -144,9 +144,9 @@
                 <input class="email-block__input" type="email" id="email" name="email" required
                   placeholder="Введите e-mail">
                 <div class="email-block__icon">
-                  <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px"
-                    viewbox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    x="0px" y="0px" width="16px" height="16px" viewbox="0 0 16 16" enable-background="new 0 0 16 16"
+                    xml:space="preserve">
                     <path
                       d="M8,10c-0.266,0-0.5-0.094-1-0.336L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.664C8.5,9.906,8.266,10,8,10z M15,2 H1C0.45,2,0,2.45,0,3v0.758l8,4.205l8-4.205V3C16,2.45,15.55,2,15,2z" />
                   </svg>
@@ -163,7 +163,7 @@
               <input class="impression-choice__input visually-hidden" type="radio" id="rather-like" name="opinion"
                 value="Скорее положительное" checked>
               <label class="impression-choice__label" for="rather-like">
-                <div class="impression-choice__active-input" tabindex="0"></div>
+                <span class="impression-choice__active-input" tabindex="0"></span>
                 Скорее положительное
               </label>
             </li>
@@ -171,7 +171,7 @@
               <input class="impression-choice__input visually-hidden" type="radio" id="rather-negative" name="opinion"
                 value="Скорее отрицательное">
               <label class="impression-choice__label" for="rather-negative">
-                <div class="impression-choice__active-input" tabindex="1"></div>
+                <span class="impression-choice__active-input" tabindex="1"></span>
                 Скорее отрицательное
               </label>
             </li>
@@ -179,7 +179,7 @@
               <input class="impression-choice__input visually-hidden" type="radio" id="no-answer" name="opinion"
                 value="Затрудняюсь ответить">
               <label class="impression-choice__label" for="no-answer">
-                <div class="impression-choice__active-input" tabindex="2"></div>
+                <span class="impression-choice__active-input" tabindex="2"></span>
                 Затрудняюсь ответить
               </label>
             </li>
@@ -196,7 +196,7 @@
               <input class="place-choice__input visually-hidden" type="checkbox" name="devil-bridge" id="devil-bridge"
                 value="Мост Дьявола" checked>
               <label class="place-choice__label" for="devil-bridge">
-                <div class="place-choice__active-input" tabindex="3"></div>
+                <span class="place-choice__active-input" tabindex="3"></span>
                 Мост Дьявола
               </label>
             </li>
@@ -205,7 +205,7 @@
               <input class="place-choice__input visually-hidden" type="checkbox" name="bell-mountain" id="bell-mountain"
                 value="Гора-Колокол" checked>
               <label class="place-choice__label" for="bell-mountain">
-                <div class="place-choice__active-input place-choice__mountain-input" tabindex="4"></div>
+                <span class="place-choice__active-input place-choice__mountain-input" tabindex="4"></span>
                 Гора-Колокол
               </label>
             </li>
@@ -214,7 +214,7 @@
               <input class="place-choice__input visually-hidden" type="checkbox" name="slide-park" id="slide-park"
                 value="Слайд-парк" checked>
               <label class="place-choice__label" for="slide-park">
-                <div class="place-choice__active-input place-choice__park-input" tabindex="5"></div>
+                <span class="place-choice__active-input place-choice__park-input" tabindex="5"></span>
                 Слайд-парк
               </label>
             </li>
@@ -223,7 +223,7 @@
               <input class="place-choice__input visually-hidden" type="checkbox" name="red-rocks" id="red-rocks"
                 value="Красные скалы">
               <label class="place-choice__label" for="red-rocks">
-                <div class="place-choice__active-input" tabindex="5"></div>
+                <span class="place-choice__active-input" tabindex="5"></span>
                 Красные скалы
               </label>
             </li>
@@ -271,7 +271,7 @@
           <ul class="social__list">
             <li class="social__item twitter-item">
               <a class="social__link social__link--twitter" href="#" aria-label="Седона в Twitter">
-                <svg class="social__img twitter-icon" version="1.0" id="Layer" xmlns="http://www.w3.org/2000/svg"
+                <svg class="social__img twitter-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px"
                   viewbox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
                   <g id="W6EeEF_1_">
@@ -285,7 +285,7 @@
             </li>
             <li class="social__item facebook-item">
               <a class="social__link social__link--facebook" href="#" aria-label="Седона в Facebook">
-                <svg class="social__img facebook-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="social__img facebook-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px"
                   viewbox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
                   <path
@@ -295,7 +295,7 @@
             </li>
             <li class="social__item youtube-item">
               <a class="social__link social__link--youtube" href="#" aria-label="Седона на YouTube">
-                <svg class="social__img youtube-icon" version="1.0" id="Layer_2" xmlns="http://www.w3.org/2000/svg"
+                <svg class="social__img youtube-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px"
                   viewbox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
                   <path
@@ -308,9 +308,9 @@
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px"
-              viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09"
+              enable-background="new 0 0 26.943 34.09" xml:space="preserve">
               <path
                 d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z" />
             </svg>
@@ -319,7 +319,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/main_nav_animation.js"></script>
 </body>
-<script src="js/main_nav_animation.js"></script>
 
 </html>
