--- a/source/photo.html
+++ b/source/photo.html
@@ -23,7 +23,7 @@
         <button class="main-nav__button main-nav__button--opened" type="button">
           <span class="visually-hidden">Открыть меню</span>
 
-          <svg class="main-nav__icon-menu" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+          <svg class="main-nav__icon-menu" version="1.0" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22.928px" height="21.982px"
             viewBox="0 0 22.928 21.982" enable-background="new 0 0 22.928 21.982" xml:space="preserve">
             <g>
@@ -33,7 +33,7 @@
             </g>
           </svg>
 
-          <svg class="main-nav__icon-cross" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+          <svg class="main-nav__icon-cross" version="1.0" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23px" height="23px"
             viewBox="0 0 22.199 22.199" enable-background="new 0 0 22.199 22.199" xml:space="preserve">
             <polygon
@@ -111,7 +111,7 @@
               </div>
 
               <div class="cards-section__review vast-card__review">
-                <svg class="cards-section__like-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                   viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g id="Page-1">
@@ -150,7 +150,7 @@
                 <span class="plants-card__author card-author-name">Автор фото: Сергей</span>
               </div>
               <div class="cards-section__review plants-card__review">
-                <svg class="cards-section__like-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                   viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g id="Page-1">
@@ -189,7 +189,7 @@
                 <span class="road-card__author card-author-name">Автор фото: Петр</span>
               </div>
               <div class="cards-section__review road-card__review">
-                <svg class="cards-section__like-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                   viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g id="Page-1">
@@ -228,7 +228,7 @@
                 <span class="bridge-card__author card-author-name">Автор фото: Антон</span>
               </div>
               <div class="cards-section__review bridge-card__review">
-                <svg class="cards-section__like-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                   viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g id="Page-1">
@@ -264,13 +264,14 @@
               <img class="video-image" src="../img/video-mobile@1x.jpg" srcset="../img/video-mobile@2x.jpg 2x"
                 alt="Видеопрезентация">
             </picture>
+          </p>
           <div class="intro-video__player player">
             <div class="player__timeline timeline">
               <div class="timeline__bar"></div>
               <div class="timeline__seek"></div>
             </div>
             <p class="player__button-replay">
-              <svg class="player__replay-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+              <svg class="player__replay-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="20px"
                 viewBox="0 0 16 20" enable-background="new 0 0 16 20" xml:space="preserve">
                 <path
@@ -278,7 +279,7 @@
               </svg>
             </p>
             <p class="player__button-subtitles">
-              <svg class="player__subtitles-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+              <svg class="player__subtitles-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="20px"
                 viewBox="0 0 32 20" enable-background="new 0 0 32 20" xml:space="preserve">
                 <path
@@ -286,7 +287,7 @@
               </svg>
             </p>
             <p class="player__button-fullscreen">
-              <svg class="player__fullscreen-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+              <svg class="player__fullscreen-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px"
                 viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve">
                 <g>
@@ -298,7 +299,6 @@
               </svg>
             </p>
           </div>
-          </p>
         </div>
       </section>
 
@@ -312,7 +312,7 @@
           <ul class="social__list">
             <li class="social__item twitter-item">
               <a class="social__link social__link--twitter" href="#" aria-label="Седона в Twitter">
-                <svg class="social__img twitter-icon" version="1.0" id="Layer" xmlns="http://www.w3.org/2000/svg"
+                <svg class="social__img twitter-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px"
                   viewbox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
                   <g id="W6EeEF_1_">
@@ -326,7 +326,7 @@
             </li>
             <li class="social__item facebook-item">
               <a class="social__link social__link--facebook" href="#" aria-label="Седона в Facebook">
-                <svg class="social__img facebook-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <svg class="social__img facebook-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="8.672px" height="18.944px"
                   viewbox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
                   <path
@@ -336,7 +336,7 @@
             </li>
             <li class="social__item youtube-item">
               <a class="social__link social__link--youtube" href="#" aria-label="Седона на YouTube">
-                <svg class="social__img youtube-icon" version="1.0" id="Layer_2" xmlns="http://www.w3.org/2000/svg"
+                <svg class="social__img youtube-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="19.979px" height="14.015px"
                   viewbox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
                   <path
@@ -349,9 +349,9 @@
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px"
-              viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09"
+              enable-background="new 0 0 26.943 34.09" xml:space="preserve">
               <path
                 d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z" />
             </svg>
@@ -360,7 +360,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/main_nav_animation.js"></script>
 </body>
-<script src="js/main_nav_animation.js"></script>
 
 </html>
