Код стилей блока cards-section разбит по правилам.

--- a/source/photo.html
+++ b/source/photo.html
@@ -106,8 +106,8 @@
 
             <div class="cards-section__content vast-card__content">
               <div class="cards-section__descriprion vast-card__description">
-                <h3 class="vast-card__name card-title">Неродные просторы</h3>
-                <span class="vast-card__author card-author-name">Автор фото: Борис</span>
+                <h3 class="cards-section__title vast-card__name">Неродные просторы</h3>
+                <span class="cards-section__author-name vast-card__author">Автор фото: Борис</span>
               </div>
 
               <div class="cards-section__review vast-card__review">
@@ -146,8 +146,8 @@
             </div>
             <div class="cards-section__content plants-card__content">
               <div class="cards-section__descriprion plants-card__description">
-                <h3 class="plants-card__name card-title">Местная растительность</h3>
-                <span class="plants-card__author card-author-name">Автор фото: Сергей</span>
+                <h3 class="cards-section__title plants-card__name">Местная растительность</h3>
+                <span class="cards-section__author-name plants-card__author">Автор фото: Сергей</span>
               </div>
               <div class="cards-section__review plants-card__review">
                 <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
@@ -185,8 +185,8 @@
             </div>
             <div class="cards-section__content road-card__content">
               <div class="cards-section__descriprion road-card__description">
-                <h3 class="road-card__name card-title">Дорога на север</h3>
-                <span class="road-card__author card-author-name">Автор фото: Петр</span>
+                <h3 class="cards-section__title road-card__name">Дорога на север</h3>
+                <span class="cards-section__author-name road-card__author">Автор фото: Петр</span>
               </div>
               <div class="cards-section__review road-card__review">
                 <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
@@ -224,8 +224,8 @@
             </div>
             <div class="cards-section__content bridge-card__content">
               <div class="cards-section__descriprion bridge-card__description">
-                <h3 class="bridge-card__name card-title">Мост дьявола</h3>
-                <span class="bridge-card__author card-author-name">Автор фото: Антон</span>
+                <h3 class="cards-section__title bridge-card__name">Мост дьявола</h3>
+                <span class="cards-section__author-name bridge-card__author">Автор фото: Антон</span>
               </div>
               <div class="cards-section__review bridge-card__review">
                 <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
