Исправлены tabindex на страницы формы.

--- a/source/form.html
+++ b/source/form.html
@@ -161,7 +161,7 @@
           <ul class="impressions-fieldset__choices">
             <li class="impressions-fieldset__choice impression-choice">
               <input class="impression-choice__input visually-hidden" type="radio" id="rather-like" name="opinion"
-                value="Скорее положительное" checked>
+                value="Скорее положительное" checked tabindex="-1">
               <label class="impression-choice__label" for="rather-like">
                 <span class="impression-choice__active-input" tabindex="0"></span>
                 Скорее положительное
@@ -169,17 +169,17 @@
             </li>
             <li class="impressions-fieldset__choice impression-choice">
               <input class="impression-choice__input visually-hidden" type="radio" id="rather-negative" name="opinion"
-                value="Скорее отрицательное">
+                value="Скорее отрицательное" tabindex="-1">
               <label class="impression-choice__label" for="rather-negative">
-                <span class="impression-choice__active-input" tabindex="1"></span>
+                <span class="impression-choice__active-input" tabindex="0"></span>
                 Скорее отрицательное
               </label>
             </li>
             <li class="impressions-fieldset__choice impression-choice">
               <input class="impression-choice__input visually-hidden" type="radio" id="no-answer" name="opinion"
-                value="Затрудняюсь ответить">
+                value="Затрудняюсь ответить" tabindex="-1">
               <label class="impression-choice__label" for="no-answer">
-                <span class="impression-choice__active-input" tabindex="2"></span>
+                <span class="impression-choice__active-input" tabindex="0"></span>
                 Затрудняюсь ответить
               </label>
             </li>
@@ -194,36 +194,36 @@
 
             <li class="places-fieldset__choice place-choice">
               <input class="place-choice__input visually-hidden" type="checkbox" name="devil-bridge" id="devil-bridge"
-                value="Мост Дьявола" checked>
+                value="Мост Дьявола" checked tabindex="-1">
               <label class="place-choice__label" for="devil-bridge">
-                <span class="place-choice__active-input" tabindex="3"></span>
+                <span class="place-choice__active-input" tabindex="0"></span>
                 Мост Дьявола
               </label>
             </li>
 
             <li class="places-fieldset__choice place-choice">
               <input class="place-choice__input visually-hidden" type="checkbox" name="bell-mountain" id="bell-mountain"
-                value="Гора-Колокол" checked>
+                value="Гора-Колокол" checked tabindex="-1">
               <label class="place-choice__label" for="bell-mountain">
-                <span class="place-choice__active-input place-choice__mountain-input" tabindex="4"></span>
+                <span class="place-choice__active-input place-choice__mountain-input" tabindex="0"></span>
                 Гора-Колокол
               </label>
             </li>
 
             <li class="places-fieldset__choice place-choice">
               <input class="place-choice__input visually-hidden" type="checkbox" name="slide-park" id="slide-park"
-                value="Слайд-парк" checked>
+                value="Слайд-парк" checked tabindex="-1">
               <label class="place-choice__label" for="slide-park">
-                <span class="place-choice__active-input place-choice__park-input" tabindex="5"></span>
+                <span class="place-choice__active-input place-choice__park-input" tabindex="0"></span>
                 Слайд-парк
               </label>
             </li>
 
             <li class="places-fieldset__choice place-choice">
               <input class="place-choice__input visually-hidden" type="checkbox" name="red-rocks" id="red-rocks"
-                value="Красные скалы">
+                value="Красные скалы" tabindex="-1">
               <label class="place-choice__label" for="red-rocks">
-                <span class="place-choice__active-input" tabindex="5"></span>
+                <span class="place-choice__active-input" tabindex="0"></span>
                 Красные скалы
               </label>
             </li>
