--- a/source/photo.html
+++ b/source/photo.html
@@ -111,9 +111,9 @@
               </div>
 
               <div class="cards-section__review vast-card__review">
-                <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                  viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                <svg class="cards-section__like-icon" tabindex="0" aria-label="Поставить лайк" version="1.0"
+                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g>
                     <g transform="translate(-295.000000, -464.000000)">
                       <g transform="translate(295.000000, 464.000000)">
@@ -150,9 +150,9 @@
                 <span class="cards-section__author-name plants-card__author">Автор фото: Сергей</span>
               </div>
               <div class="cards-section__review plants-card__review">
-                <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                  viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                <svg class="cards-section__like-icon" tabindex="0" aria-label="Поставить лайк" version="1.0"
+                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g>
                     <g transform="translate(-295.000000, -464.000000)">
                       <g transform="translate(295.000000, 464.000000)">
@@ -189,9 +189,9 @@
                 <span class="cards-section__author-name road-card__author">Автор фото: Петр</span>
               </div>
               <div class="cards-section__review road-card__review">
-                <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                  viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                <svg class="cards-section__like-icon" tabindex="0" aria-label="Поставить лайк" version="1.0"
+                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g>
                     <g transform="translate(-295.000000, -464.000000)">
                       <g transform="translate(295.000000, 464.000000)">
@@ -228,9 +228,9 @@
                 <span class="cards-section__author-name bridge-card__author">Автор фото: Антон</span>
               </div>
               <div class="cards-section__review bridge-card__review">
-                <svg class="cards-section__like-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                  viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                <svg class="cards-section__like-icon" tabindex="0" aria-label="Поставить лайк" version="1.0"
+                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g>
                     <g transform="translate(-295.000000, -464.000000)">
                       <g transform="translate(295.000000, 464.000000)">
@@ -268,28 +268,29 @@
           <div class="intro-video__player player">
             <div class="player__timeline timeline">
               <div class="timeline__bar"></div>
-              <div class="timeline__seek"></div>
+              <div class="timeline__seek" tabindex="0" aria-label="Курсор воспроизведения видео"></div>
             </div>
             <span class="player__button-replay">
-              <svg tabindex="0" class="player__replay-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="20px"
-                viewBox="0 0 16 20" enable-background="new 0 0 16 20" xml:space="preserve">
+              <svg class="player__replay-icon" tabindex="0" aria-label="Воспроизвести видео сначала" version="1.0"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                width="16px" height="20px" viewBox="0 0 16 20" enable-background="new 0 0 16 20" xml:space="preserve">
                 <path
                   d="M8,4V0L3,5l5,5V6c3.315,0,6,2.686,6,6s-2.685,6-6,6s-6-2.686-6-6H0c0,4.42,3.58,8,8,8s8-3.58,8-8S12.42,4,8,4z" />
               </svg>
             </span>
             <span class="player__button-subtitles">
-              <svg class="player__subtitles-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="20px"
-                viewBox="0 0 32 20" enable-background="new 0 0 32 20" xml:space="preserve">
+              <svg class="player__subtitles-icon" tabindex="0" aria-label="Переключить субтитры видео" version="1.0"
+                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                width="32px" height="20px" viewBox="0 0 32 20" enable-background="new 0 0 32 20" xml:space="preserve">
                 <path
                   d="M29,0H3C1.35,0,0,1.35,0,3v14c0,1.65,1.35,3,3,3h26c1.65,0,3-1.35,3-3V3C32,1.35,30.65,0,29,0z M14.403,15.854c-0.545,0.108-1.104,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041 s-0.852-1.103-1.133-1.868C7.69,12.02,7.551,11.091,7.551,10c0-1.134,0.157-2.085,0.471-2.851c0.315-0.768,0.723-1.384,1.224-1.854  c0.502-0.468,1.062-0.804,1.679-1.008c0.616-0.204,1.233-0.307,1.852-0.307c0.66,0,1.22,0.045,1.678,0.134  c0.457,0.087,0.835,0.192,1.133,0.313L15.14,6.347c-0.254-0.121-0.555-0.209-0.902-0.265C13.891,6.027,13.47,6,12.973,6 c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031c0,0.598,0.067,1.142,0.199,1.632  c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.607,0.619,1.01,0.812c0.402,0.193,0.867,0.29,1.396,0.29  c0.496,0,0.915-0.049,1.257-0.148c0.342-0.099,0.639-0.227,0.893-0.38l0.463,1.841C15.398,15.564,14.949,15.745,14.403,15.854z   M23.101,15.854c-0.545,0.108-1.105,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041  s-0.852-1.103-1.133-1.868c-0.281-0.767-0.421-1.695-0.421-2.786c0-1.134,0.157-2.085,0.471-2.851  c0.314-0.768,0.723-1.384,1.223-1.854c0.502-0.468,1.062-0.804,1.68-1.008c0.616-0.204,1.233-0.307,1.851-0.307 c0.661,0,1.221,0.045,1.678,0.134c0.458,0.087,0.836,0.192,1.133,0.313l-0.446,1.918c-0.253-0.121-0.554-0.209-0.901-0.265  C22.588,6.027,22.166,6,21.67,6c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031  c0,0.598,0.067,1.142,0.199,1.632c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.606,0.619,1.009,0.812 c0.402,0.193,0.868,0.29,1.396,0.29c0.497,0,0.915-0.049,1.257-0.148c0.342-0.099,0.64-0.227,0.894-0.38l0.463,1.841  C24.096,15.564,23.646,15.745,23.101,15.854z" />
               </svg>
             </span>
             <span class="player__button-fullscreen">
-              <svg class="player__fullscreen-icon" version="1.0" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px"
-                viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve">
+              <svg class="player__fullscreen-icon" tabindex="0" aria-label="Переключить полноэкранный режим"
+                version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                y="0px" width="20px" height="20px" viewBox="0 0 20 20" enable-background="new 0 0 20 20"
+                xml:space="preserve">
                 <g>
                   <polygon points="0,0 0,3 0,6 3,6 3,3 6,3 6,0 3,0" />
                   <polygon points="3,14 0,14 0,17 0,20 3,20 6,20 6,17 3,17" />
